gramatica.txt
<program>                   -> <function> | <function> <program>
<function>                  -> <dataType> <identifier> ( <parameters> ) { <statement>* }
<statement>                 -> <declaration> | <assignment> | <ifStatement> | <returnStatement>
<ifStatement>               -> if ( <condition> ) { <statement>* } | if ( <condition> ) { <statement>* } else { <statement>* }
<returnStatement>           -> return <expression> ;
<parameters>                -> ε | <argument> | <argument> , <parameters>
<argument>                  -> <dataType> <identifier> | <dataType> <identifier> [ <number> ]
<declaration>               -> <dataType> <identifier> ; | <dataType> <identifier> [ <number> ] ; | <dataType> <assignment> ;
<assignment>                -> <identifier> = <expression> ; | <identifier> [ <epresion> ] = <expresion>;
<expression>                -> <term> | <term> + <expression> | <term> - <expression> | <term> <relationalOperator> <expression>
<term>                      -> <factor> | <factor> * <term> | <factor> / <term>
<factor>                    -> <identifier> | <number> | ( <expression> ) | <arrayAccess>
<arrayAccess>               -> <identifier> [ <expression> ]
<relationalOperator>        -> < | > | <= | >= | == | !=
<dataType>                  -> int | float | char | short | void | double | bool
<identifier>                -> [a-zA-Z][a-zA-Z0-9_]*
<floatingPointNumber>       -> [0-9]+.[0-9]+
<number>                    -> [0-9]+
